# AudioStreaming

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
components/opus/: CMakeLists.txt
include/: audio_source.h  opus_codec.h  proto.h  sink.h  transport.h
rc/: audio_esp32.cpp
src/: CMakeLists.txt  app_main.cpp  audio_i2s.cpp  audio_portaudio.cpp  client_main.cpp  entry_client.cpp  entry_server.cpp  opus_codec.cpp  server_main.cpp  sink_file.cpp  transport_udp.cpp
