idf_component_register(
  SRCS
    # Tutti i .c necessari (escludiamo demo/test)
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus_decoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus_encoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus_multistream.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus_multistream_decoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/opus_multistream_encoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/src/repacketizer.c

    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/bands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/celt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/celt_decoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/celt_encoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/celt_lpc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/entcode.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/entdec.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/entenc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/kiss_fft.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/laplace.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/mathops.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/mdct.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/modes.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/pitch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/quant_bands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/rate.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/celt/vq.c

    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NSQ.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NSQ_del_dec.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/VAD.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/VQ_WMat_EC.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/ana_filt_bank_1.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/biquad_alt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/bwexpander.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/bwexpander_32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/dec_API.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_core.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_frame.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_indices.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_parameters.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_pitch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decode_pulses.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/decoder_set_fs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/enc_API.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/encode_indices.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/encode_pulses.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/gain_quant.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/init_decoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/init_encoder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/inner_prod_aligned.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/interpolate.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/lin2log.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/log2lin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/LPC_analysis_filter.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/LPC_fit.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/LPC_inv_pred_gain.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/LP_variable_cutoff.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_decode.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_del_dec_quant.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_encode.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_stabilize.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_unpack.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_VQ.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/NLSF_VQ_weights_laroia.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/pitch_analysis_core.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/process_gains.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/quant_LTP_gains.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_down2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_down2_3.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_private_AR2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_private_down_FIR.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_private_IIR_FIR.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_private_up2_HQ.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/resampler_rom.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/shell_coder.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/sigm_Q15.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/sort.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/sum_sqr_shift.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/table_LSF_cos.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_NLSF_CB_NB_MB.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_NLSF_CB_WB.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_gain.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_other.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_pitch_lag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_pulses_per_block.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/VQ_nearest_neighbor.c
    ${CMAKE_CURRENT_SOURCE_DIR}/opus/silk/tables_sigmoid.c
  INCLUDE_DIRS
    opus/include
    opus/celt
    opus/silk
)

target_compile_definitions(${COMPONENT_TARGET} PUBLIC
  OPUS_BUILD
  FIXED_POINT           # ESP32 senza FPU
  DISABLE_FLOAT_API
  VAR_ARRAYS=0
)

target_compile_options(${COMPONENT_TARGET} PUBLIC -O2)
